Add mentoring detail
